# UMLEditor

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cppcheck_suppressions.txt
.github/: codecov.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
cmake/platform/: Darwin.cmake
src/: CMakeLists.txt  main.cpp
src/cli/: readline_controller.cpp  readline_controller.hpp  readline_view.cpp  readline_view.hpp
src/commands/: base_commands.cpp  base_commands.hpp  commands.cpp  commands.hpp  completers.cpp  completers.hpp  metaprogramming.hpp  timeline.cpp  timeline.hpp
src/model/: checking.hpp  class.cpp  class.hpp  diagram.cpp  diagram.hpp  field.cpp  field.hpp  method.cpp  method.hpp  method_signature.cpp  method_signature.hpp  parameter.cpp  parameter.hpp  relationship.cpp  relationship.hpp  relationship_type.cpp  relationship_type.hpp
src/utils/: io_context.cpp  io_context.hpp  utils.cpp  utils.hpp
